single blog complated

--- a/src/views/user/partials/blog-card.ejs
+++ b/src/views/user/partials/blog-card.ejs
@@ -1,7 +1,7 @@
 <div class="tm-article-box wide">
   <img src="../user/img/articles/articles6.png" alt="Article 6" />
   <div class="tm-article-box-content">
-    <a href="#">
+    <a href="/blogs/<%- blog.id  %>">
       <div class="tm-article-title"><%- blog.title  %> </div>
       <div class="tm-article-text"><%- blog.content.substring(0,200)  %>... </div>
     </a>
