--- a/src/views/user/pages/articles/single-blog.ejs
+++ b/src/views/user/pages/articles/single-blog.ejs
@@ -1,7 +1,7 @@
     <div class="tm-main-content" id="top">
         <div class="tm-top-bar single mixed tm-bg-background" id="tm-top-bar">
             
-            <%- include("../partials/top-navbar")  %>
+            <%- include("../../partials/top-navbar")  %>
 
         </div>
         <div class="tm-section tm-bg-img min article-background" id="tm-section-1">
@@ -25,7 +25,7 @@
             <div class="container">
                 <div class="row">
                     
-                    <%- include("../partials/find-dialysis-center") %> 
+                    <%- include("../../partials/find-dialysis-center") %> 
 
                     <div class="col-sm-12 col-md-12 col-lg-9 col-xl-9">
                         <div class="tm-content">
